--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "uuid": "^8.3.0",
     "vue": "^2.6.11",
+    "vue-images-loaded": "^1.1.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
