--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.4.4",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
+    "moment": "^2.27.0",
     "uuid": "^8.3.0",
     "vue": "^2.6.11",
     "vue-images-loaded": "^1.1.2",
